--- a/course_project/course project.ipynb
+++ b/course_project/course project.ipynb
@@ -1400,12 +1400,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_fine.to_csv('prep_dataset.csv', index=False, encoding='utf-8')"
+    "pred_fine.to_csv('lkashin_predict.csv', encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
